# dvel

./: .gitignore  CHANGELOG.md  README.md
benchmarks/: CMakeLists.txt  benchmark.cpp
cmake/: RustCore.cmake
cpp-sim/: CMakeLists.txt
cpp-sim/core/: bus.hpp  gossip.hpp  metrics.hpp  node.hpp  scenario.hpp  scheduler.hpp  scoring.hpp  types.hpp
cpp-sim/executables/: gov_ledger.cpp  sim_baseline.cpp  sim_metrics.cpp  sim_scenario.cpp  sim_scheduler.cpp  sim_sybil.cpp
cpp-sim/executables/attacks/: sim_attack_51percent.cpp  sim_attack_eclipse.cpp  sim_attack_partition.cpp  sim_attack_sybil_flood.cpp
cpp-sim/executables/protocol_tests/: sim_baseline.cpp  sim_scheduler.cpp
cpp-sim/tools/: check_trace.py  merge_trace.py  prover_stub.py  run_trace_pipeline.sh
docs/: architecture.md  ffi_reference.md  trace_pipeline.md
docs/paper/: adversary_model.md  appendix_a.md  core_protocol.md  reference_implementation_contract.md  spec_hygiene_pass.md  threat_table.md
examples/: CMakeLists.txt  ffi_minimal.cpp
include/: dvel_ffi.h
rust-core/: Cargo.toml
rust-core/benches/: bft_throughput.rs
rust-core/src/: event.rs  ffi.rs  ledger.rs  lib.rs  scoring.rs  storage.rs  trace_check.rs  validation.rs
rust-core/src/bft/: node.rs
rust-core/tests/: ffi_smoke.rs
rust-core/tools/: dvel_worker.sh
scripts/: smoke.sh
